# OpenMines

./: .dockerignore  .envrc.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  ASSESSMENT.md  AUDIT.md  AUDIT_STATE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SERVER_CONSISTENCY_PLAN.md  SERVER_MIGRATION_STATUS.md  SIMULATION_KERNEL_PLAN.md  SOUND.md  TODO.md  buildings.json  cells.json  config.example.json  config.json  deny.toml  openmines.db.float-charge-backup-20260706-185827  telegram_history.md
.cargo/: audit.toml  config.toml
.claude/: AGENTS.md  settings.json
.config/: nextest.toml
.githooks/: pre-commit
.github/: AGENTS.md  CLAUDE.md  CODEOWNERS  pull_request_template.md
conductor/: ecs-full-migration.md
configs/: buildings.json  cells.json  config.json
crates/openmines-loadtest/: Cargo.toml
crates/openmines-loadtest/src/: client.rs  config.rs  main.rs  protocol.rs  scenario.rs  stats.rs
crates/openmines-proxy/: Cargo.toml
crates/openmines-proxy/src/: main.rs
crates/openmines-runtime/: Cargo.toml
crates/openmines-runtime/src/: lib.rs  logging.rs  metrics.rs  time.rs
crates/openmines-shared/: Cargo.toml  cells.json
crates/openmines-shared/migrations/: 20260622000001_player_bonus.sql  20260625000000_data_backfill.sql  20260705000000_clan_request_unique.sql  20260708000000_building_craft_ready.sql  20260708001000_fix_numeric_craft_ready.sql  20260708002000_orders_ready_index.sql
crates/openmines-shared/src/: config.rs  env_config.rs  lib.rs  logging.rs  time.rs
crates/openmines-shared/src/db/: buildings.rs  chats.rs  clans.rs  events.rs  mod.rs  orders.rs  players.rs  programs.rs  provider.rs
crates/openmines-shared/src/protocol/: mod.rs  packets.rs  wire_tests.rs
crates/openmines-shared/src/world/: anl.rs  cells.rs  generator.rs  mod.rs
crates/openmines-storage/: Cargo.toml
crates/openmines-storage/migrations/: 20260621000000_init.sql  20260622000000_orders.sql  20260706000000_events.sql  20260706000001_selected_program.sql  20260706000002_programmator_running.sql  20260706000003_programmator_snapshot.sql  20260706000004_player_aggression.sql
crates/openmines-storage/src/: boxes.rs  buildings.rs  chats.rs  clans.rs  events.rs  lib.rs  orders.rs  players.rs  programs.rs  provider.rs
crates/openmines-world/: Cargo.toml
crates/openmines-world/src/: anl.rs  generator.rs  lib.rs  map_format.rs  sector_palette.rs
docs/: API.md  ARCHITECTURE.md  BACKLOG.md  CLIENT_PROTOCOL_GAPS.md  CLIENT_UI_BACKLOG.md  CLIENT_UI_MODERNIZATION_PLAN.md  CLIENT_UI_TEST_MATRIX.md  DEBUG.md  DEVIATIONS.md  ECS_REWRITE.md  ITEMS_BUILDINGS_STATUS.md  PACK_SPRITE_ORPHANS.md  PARITY_AUDIT.md  PROGRAMMATOR_GUI_PROTOCOL.md  PROTOCOL.md  RUST_TOOLING.md  SKILLS_STATUS.md  TOOLS_AUDIT.md  WORLDGEN_PARITY.md
ops/: Dockerfile  Dockerfile.vps  docker-compose.regen-world.yml  docker-compose.vps.yml  docker-compose.yml  vps-cargo-docker.sh
scripts/: AGENTS.md  CLAUDE.md  arch-audit.sh  arch-guard.sh  bootstrap-quality.sh  build-client.sh  check-fmod-events.sh  (+17 more)
server/: CLAUDE.md  Cargo.toml  cli.rs  config.rs  console.rs  cron.rs  logging.rs  main.rs  mapviewer_http.rs  metrics.rs  ops_http.rs
server/admin/: app.js  index.html
server/db/: CLAUDE.md  boxes.rs  buildings.rs  chats.rs  clans.rs  mod.rs  orders.rs  players.rs  programs.rs  provider.rs
server/game/: AGENTS.md  CLAUDE.md  acid.rs  alive.rs  botspot.rs  building_damage.rs  buildings.rs  chat.rs  combat.rs  command.rs  coords.rs  crafting.rs  direction.rs  market.rs  mod.rs  mod.rs.partial.txt  player.rs  programmator.rs  sand.rs  skills.rs
server/net/: AGENTS.md  CLAUDE.md  auction.rs  lifecycle.rs  mod.rs
server/net/session/: CLAUDE.md  connection.rs  constants.rs  mod.rs  prelude.rs  util.rs  wire.rs
server/net/session/auth/: CLAUDE.md  gui_flow.rs  login.rs
server/net/session/dispatch/: AGENTS.md  CLAUDE.md  mod.rs  ty.rs
server/net/session/outbound/: CLAUDE.md  chat_sync.rs  inventory_sync.rs  player_sync.rs
server/net/session/play/: AGENTS.md  CLAUDE.md  bonus.rs  chunks.rs  death.rs  dig_build.rs  geo.rs  mod.rs  movement.rs  packs.rs  spawn.rs
server/net/session/player/: AGENTS.md  CLAUDE.md  init.rs  mod.rs
server/net/session/social/: AGENTS.md  CLAUDE.md  buildings.rs  chat.rs  clans.rs  commands.rs  misc.rs  mod.rs
server/net/session/ui/: AGENTS.md  CLAUDE.md  auction_gui.rs  gui_buttons.rs  heal_inventory.rs  horb.rs  mod.rs  up_building.rs
server/protocol/: AGENTS.md  CLAUDE.md  mod.rs  packets.rs  wire_tests.rs
server/src/: bootstrap.rs  cli.rs  console.rs  doctor.rs  main.rs  migrations.rs  shutdown.rs
server/src/game/: chat.rs  crafting.rs  mod.rs
server/src/game/actors/: alive.rs  botspot.rs  player.rs  programmator.rs
server/src/game/economy/: market.rs  mod.rs
server/src/game/logic/: contracts.rs  mod.rs  skills.rs
server/src/game/mechanics/: building_damage.rs  combat.rs  events.rs  mod.rs  random.rs  skills.rs
server/src/game/structures/: buildings.rs
server/src/game/world/: mod.rs  sand.rs
server/src/net/: mod.rs  web.rs
server/src/net/session/: connection.rs  constants.rs  handshake.rs  heartbeat.rs  mod.rs  prelude.rs  rate_limit.rs  state.rs  wire.rs
server/src/net/session/auth/: login.rs
server/src/net/session/dispatch/: ty.rs
server/src/net/session/outbound/: inventory_sync.rs  mod.rs  player_sync.rs
server/src/net/session/play/: bonus.rs  chunks.rs  death.rs  dig_build.rs  geo.rs  movement.rs  packs.rs
server/src/net/session/player/: init.rs
server/src/net/session/social/: buildings.rs  chat.rs  clans.rs  commands.rs  misc.rs
server/src/net/session/ui/: auction_gui.rs  gui_buttons.rs  heal_inventory.rs  up_building.rs
server/src/tasks/: auction.rs  cron.rs  lifecycle.rs  mod.rs
server/world/: AGENTS.md  CLAUDE.md  anl.rs  cells.rs  dotnet_random.rs  generator.rs  mod.rs  sector_palette.rs  sectors_gen.rs  world_cell.rs
tools/loadtest/: Cargo.toml
tools/loadtest/src/: main.rs
tools/proxy/: Cargo.toml
(+211 files in other folders)
