[package]
name = "openmines-server"
description = "OpenMines — игровой сервер (Rust) и legacy Unity-клиент"
version = "0.0.2"
edition = "2024"
homepage = "https://github.com/murasama/OpenMines"
repository = "https://github.com/murasama/OpenMines"
authors = ["OpenMines contributors"]
keywords = ["game", "server", "rust", "tcp", "sqlite"]
license = "MIT"

[[bin]]
name = "openmines-server"
path = "server/main.rs"

# Нагрузочный замер (dev-тул): N синтетических wire-клиентов. См. server/bin/loadtest.rs.
[[bin]]
name = "loadtest"
path = "server/bin/loadtest.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
bytes = "1.12.0"
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
md5 = "0.7.0"
sha2 = "0.10.9"
rand = "0.9.4"
dashmap = "6.2.1"
parking_lot = "0.12.5"
rayon = "1.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
anyhow = "1.0.102"
prometheus = "0.14.0"
bevy_ecs = "0.18.1"
base64 = "0.22.1"
lzma-rs = "0.3.0"
tokio-cron-scheduler = "0.13.0"
binrw = "0.14.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
strum = { version = "0.28.0", features = ["derive"] }
dotnet-rng = "1.0.5"
clap = { version = "4.5.31", features = ["derive"] }



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Не стрипать proc-macro/build-script dylib: на macOS (ld-1328+) strip ломает
# выравнивание LINKEDIT и dlopen падает с "mis-aligned LINKEDIT string pool".
# Финальный бинарь остаётся stripped — эти артефакты в релиз не попадают.
[profile.release.build-override]
strip = false
