[workspace]
resolver = "2"
members = [
    "crates/openmines-config",
    "crates/openmines-core",
    "crates/openmines-protocol",
    "crates/openmines-runtime",
    "crates/openmines-storage",
    "crates/openmines-world",
    "crates/openmines-server",
    "crates/openmines-loadtest",
    "crates/openmines-proxy"
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "macros",
    "fs",
] }
bytes = "1.12.0"
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
md5 = "0.7.0"
sha2 = "0.10.9"
rand = "0.9.4"
dashmap = "6.2.1"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
rayon = "1.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
anyhow = "1.0.103"
prometheus = "0.14.0"
bevy_ecs = "0.18.1"
base64 = "0.22.1"
lzma-rs = "0.3.0"
tokio-cron-scheduler = "0.13.0"
binrw = "0.14.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
strum = { version = "0.28.0", features = ["derive"] }
dotnet-rng = "1.0.5"
clap = { version = "4.5.31", features = ["derive", "env"] }
axum = "0.7.9"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
num-traits = "0.2.19"
governor = "0.10.4"

# Internal workspace dependency
openmines-config = { path = "crates/openmines-config" }
openmines-core = { path = "crates/openmines-core" }
openmines-protocol = { path = "crates/openmines-protocol" }
openmines-runtime = { path = "crates/openmines-runtime" }
openmines-storage = { path = "crates/openmines-storage" }
openmines-world = { path = "crates/openmines-world" }

[profile.dev]
debug = 2
incremental = true

[profile.test]
debug = 2
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
strip = false

[profile.release.build-override]
strip = false
