[package]
name = "openmines-server"
version = "0.0.2"
edition = "2024"
license = "MIT"
default-run = "openmines-server"

[[bin]]
name = "openmines-server"
path = "src/main.rs"

[dependencies]
openmines-shared = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
md5 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
base64 = { workspace = true }
lzma-rs = { workspace = true }
tokio-cron-scheduler = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
num-traits = { workspace = true }
sqlx = { workspace = true }
governor = { workspace = true }
