[package]
name = "openmines-shared"
version = "0.0.2"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
prometheus = { workspace = true }
binrw = { workspace = true }
sqlx = { workspace = true }
rayon = { workspace = true }
dotnet-rng = { workspace = true }
