[package]
name = "loadtest"
version = "0.0.2"
edition = "2024"
license = "MIT"

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
openmines-shared = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
md5 = { workspace = true }
